@@ -139,6 +139,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - tmpMsg is drawn from GameEngine::drawOverlays()
   - logo, version and stats are drawn in MainMenu::drawOverlay()
 **** TODO Start to handle Local test
+     CLOCK: [2017-03-31 ven. 22:20]--[2017-03-31 ven. 23:44] =>  1:24
      CLOCK: [2017-03-30 jeu. 00:17]--[2017-03-30 jeu. 00:38] =>  0:21
      CLOCK: [2017-03-29 mer. 23:48]--[2017-03-30 jeu. 00:03] =>  0:15
      CLOCK: [2017-03-29 mer. 22:15]--[2017-03-29 mer. 22:43] =>  0:28
@@ -190,20 +191,31 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Char is correctly sent
       - [X] Should send these events to gamestate
 	 return true if event is used
+    - [-] Implement the Back button
+      - [X] There is a  =Texture already exists: rpgLogo= when creating MainMenu
+      - [X] There's an event issue when trying to go back to MainMenu
+        ='root/GameMenu/Exit' is not attached to Element at 'Root'=
+	- Now calling GameState::destroyRootWindow()
+	We have a segfault in MainMenu::drawOverlay()
+	in CEGUI::RenderingSurface::draw()
+      - [ ] Trying to go back to localTest seems to fail
     - [-] Should we rely on a server's class to generate the new world ?
       - [X] should be compiled as a shared lib used by both server & client	
       - [ ] something like server::load(worldconfig) or server::generate(config)
-    - [ ] Global gamestate button : Back/Play  
-      The global Play button should only be enabled if a world is available
     - [ ] For the existing world tab, we must have a RGL function
       that returns existing local worlds
       - [ ] We need to free librlgl first
       - [ ] Then add rlgl as a git submodule in ext/
       - [ ] Then implement and use the getLocalWorlds() function
-     - [ ] Random seed may come from a RLGL function
-       Because the seed could come from another function than simply rand()
+    - [ ] Random seed may come from a RLGL function
+      Because the seed could come from another function than simply rand()
   - [ ] Implement LocalTest overriden functions
     Save/Restore state functions
+- [ ] Must validate the LocalTest layout and enable Play button
+  In the key pressed GameState event
+  - [ ] Get the currently selected tab
+  - [ ] If new world, test if the name and seed aren't empty
+  - [ ] If in existing world tab, search for a selected one
 - [ ] Launch an embedded server
 - [ ] See if we can generate a first landscape
 **** TODO Some wiki work
