@@ -37,4 +37,5 @@ OVERALL TODO
    Update VERSION and REVISION in CMakeLists.txt
    
 * v0.0.5-256 (29 Mar. 2017 - ???) SLOC ?,??? FT ??:?? UT ?
+- Implement the LocalTest::onBack event
 - Handle keypressed and keyreleased events in game states
