@@ -1,5 +1,8 @@
 2017-03-31  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/MainMenu.cpp (exit): now call destroyRootWindow to
+	avoid event error on reload.
+
 	* src/client/MainMenu.cpp (logoCreated): avoid creating the logo
 	geometry buffer twice.
 
